--- a/analysis/Wavelet.Rmd
+++ b/analysis/Wavelet.Rmd
@@ -26,6 +26,10 @@ ch4 <- bind_rows(raw, raw2) %>%
             CO2_slope_mmol_per_day = mean(CO2_slope_mmol_per_day, na.rm = T))
 
 #Not loading driver data separately because it is already in the CH4 data file
+ch4 %>%
+  ggplot(aes(x = time2, y = salinity)) +
+  geom_line()+
+  facet_wrap(~chamber_treatment)
 ```
 
 Then, we used Mutual Information (I) to find the relative importance of each predictor variable and identify both synchronous and asynchronous interactions (Ruddell et al., 2013). Mutual Information (I) measures the amount of information shared by two variables, X and Y, or the reduction in uncertainty of one variable given the knowledge of the other variable (Fraser & Swinney, 1986). The degree of mutual information between X and Y is increased by adding a time lag (positive or negative) in series Y relative to X, thereby allowing the identification of both synchronous and asynchronous interactions. 
@@ -37,14 +41,14 @@ Wavelet
 ```{r}
 library(waveslim)
 
-analyze_wavelets <- function(treatment) {
+analyze_wavelets <- function(ch4 = contrib_data, treatment, var_name) {
   #Format data (dealing with irregularly spaced data)
   test_data <- ch4 %>%
     filter(chamber_treatment == treatment) %>%
-    mutate(CH4_slope_umol_per_day = zoo::na.approx(CH4_slope_umol_per_day))
+    filter(!is.na(!!sym(var_name)))
   
   #Run wavelet transformation
-  data <- test_data$CH4_slope_umol_per_day
+  data <- zoo::na.approx(test_data[[var_name]])
   wavelet <- waveslim::modwt(data, "la8", n.levels = 9)
   
   meshed <- data.frame(time2 = test_data$time2,
@@ -72,18 +76,29 @@ analyze_wavelets <- function(treatment) {
                                           "256 days")))
   
   df <- meshed %>% 
-    mutate(chamber_treatment = treatment)
+    mutate(chamber_treatment = treatment,
+           var_name = var_name)
   
   return(df)
 }
 
-dfs <- map(unique(ch4$chamber_treatment), analyze_wavelets) %>%
+#Apply across all treatments and sites
+grid <- ch4 %>%
+  pivot_longer(cols = -c(time2, chamber_treatment), names_to = "var_name", values_to = "value")
+
+double_map <- function(treatment, ch4, var_name){
+  dfs <- map(unique(ch4$chamber_treatment), analyze_wavelets, ch4 = ch4, var_name = var_name) %>%
+    bind_rows()
+}
+
+dfs <- map(unique(grid$var_name), double_map, ch4 = ch4, treatment = unique(ch4$chamber_treatment)) %>%
   bind_rows()
 
+#Plot
 dfs %>%
-  group_by(name, chamber_treatment) %>%
+  group_by(name, chamber_treatment, var_name) %>%
   summarize(var = var(value)) %>%
-  group_by(chamber_treatment) %>%
+  group_by(chamber_treatment, var_name) %>%
   mutate(tot_var = sum(var))%>%
   mutate(chamber_treatment = factor(chamber_treatment,
                                     levels = c("c_1_amb",
@@ -104,7 +119,8 @@ dfs %>%
        y = "Percentage of total variance") +
   scale_color_viridis_d(name = "Site") +
   theme_bw()+
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
+  facet_wrap(~var_name)
 ```
 
 Mutual Information
@@ -112,12 +128,11 @@ Mutual Information
 ```{r}
 library(DescTools)
 
+#Make functions to calculate key metrics
 entropy <- function(target) {
   freq <- table(target)/length(target)
   # vectorize
   vec <- as.data.frame(freq)[,2]
-  #drop 0 to avoid NaN resulting from log2
-  vec<-vec[vec>0]
   #compute entropy
   -sum(vec * log2(vec))
 }
@@ -128,7 +143,8 @@ bin <- function(x, n_breaks) {
   findInterval(x, seq(lowest, highest, length.out = n_breaks))
 }
 
-mut_infs <- dfs %>%
+#Group wavelet scales into interpretable bins
+discrete_scales <- dfs %>%
   mutate(grouped_scale = ifelse(name %in% c("1 days", 
                                             "2 days"), 
                                 "Diel",
@@ -141,24 +157,130 @@ mut_infs <- dfs %>%
                                                           "128 days", 
                                                           "256 days"), 
                                               "Seasonal", NA)))) %>%
-  group_by(grouped_scale, chamber_treatment, time2) %>%
+  group_by(grouped_scale, chamber_treatment, time2, var_name) %>%
   summarize(value = sum(value)) %>%
-  left_join(ch4 %>%
-              dplyr::select(-CH4_slope_umol_per_day) %>%
-              pivot_longer(cols = -c(time2, chamber_treatment),
-                           names_to = "exp_var",
-                           values_to = "exp_var_value")) %>%
-  filter(!is.na(exp_var_value)) %>%
-  group_by(chamber_treatment, grouped_scale, exp_var) %>%
-  summarize(entropy_y = entropy(bin(value, 9)),
-            mut_inf = MutInf(bin(exp_var_value, 9), bin(value, 9))/entropy_y)
+  pivot_wider(names_from = var_name, values_from = value) 
 
+#Separate explanatory variables
+discrete_scales_exp <- discrete_scales %>%
+  dplyr::select(-CH4_slope_umol_per_day) %>%
+  pivot_longer(cols = -c(grouped_scale, chamber_treatment, time2), 
+               names_to = "exp_var", values_to = "exp_var_value") %>%
+  filter(!is.na(exp_var_value)) %>%
+  rename(grouped_scale_exp = grouped_scale)
+
+#Calculate mutual information
+mut_infs <- discrete_scales %>%
+  dplyr::select(c(grouped_scale, chamber_treatment, time2, CH4_slope_umol_per_day)) %>%
+  left_join(discrete_scales_exp, by = c("chamber_treatment", "time2")) %>%
+  filter(!is.na(exp_var_value)) %>%
+  group_by(chamber_treatment, grouped_scale, exp_var, grouped_scale_exp) %>%
+  summarize(entropy_y = entropy(bin(CH4_slope_umol_per_day, 9)),
+            mut_inf = MutInf(bin(exp_var_value, 9), bin(CH4_slope_umol_per_day, 9))/entropy_y)
+
+#Plot
 mut_infs %>%
-  ggplot(aes(x = mut_inf, y = exp_var)) +
-  geom_col() + 
-  facet_grid(rows = vars(grouped_scale), cols = vars(chamber_treatment)) +
+  mutate(chamber_treatment = factor(chamber_treatment,
+                                    levels = c("c_1_amb",
+                                               "c_2_amb",
+                                               "c_3_e0.75",
+                                               "c_4_e1.5",
+                                               "c_5_e2.25",
+                                               "c_6_e2.25",
+                                               "c_7_e3.0",
+                                               "c_8_e3.75",
+                                               "c_9_e3.75",
+                                               "c_10_e4.5",
+                                               "c_11_e5.25",
+                                               "c_12_e6.0")),
+         grouped_scale = paste0(grouped_scale, " (CH4)")) %>%
+  ggplot(aes(x = mut_inf, y = exp_var, color = chamber_treatment)) +
+  geom_point() + 
+  facet_grid(cols = vars(grouped_scale), rows = vars(grouped_scale_exp)) +
   ylab("Explanatory variable") +
-  xlab("Relative mutual information")
+  xlab("Relative mutual information") +
+  scale_color_viridis_d()
+```
+
+With lags
+
+```{r}
+#Separate explanatory variables
+discrete_scales_exp <- discrete_scales %>%
+  dplyr::select(-CH4_slope_umol_per_day) %>%
+  pivot_longer(cols = -c(grouped_scale, chamber_treatment, time2), 
+               names_to = "exp_var", values_to = "exp_var_value") %>%
+  filter(!is.na(exp_var_value)) %>%
+  rename(grouped_scale_exp = grouped_scale)
+
+fill_lags <- function(all_lags, lag) {
+  scale = unique(all_lags$grouped_scale_exp)
+  if(lag == 0 | nrow(all_lags) == 0) {
+    return(all_lags %>% filter(is.na(chamber_treatment))) #empty
+  }
+  if(lag < 0){
+    filled_lags <- all_lags %>%
+      mutate(exp_var_value_lag = lag(exp_var_value, abs(lag))) %>%
+      mutate(lag = lag)
+  }
+  if(lag > 0){
+    filled_lags <- all_lags 
+      mutate(exp_var_value_lag = lead(exp_var_value, lag)) %>%
+      mutate(lag = lag)
+  }
+  return(filled_lags)
+}
+
+output <- pmap(list(-100:100), 
+              ~fill_lags(all_lags = discrete_scales_exp %>%
+                           group_by(grouped_scale_exp, 
+                                    chamber_treatment, 
+                                    exp_var) %>%
+                           arrange(time2),
+                         .x),
+              .progress = T) %>%
+  bind_rows()
+
+#Calculate mutual information
+output_join <- output %>%
+  mutate(limit = ifelse(grouped_scale_exp == "Diel", 0.5, 
+                        ifelse(grouped_scale_exp == "Multiday", 1.5, 
+                               ifelse(grouped_scale_exp == "Seasonal", 2.5, NA)))) %>%
+  filter(abs(lag) <= limit) %>%
+  dplyr::select(-limit) 
+
+mut_infs <- discrete_scales %>%
+  dplyr::select(c(grouped_scale, chamber_treatment, time2, CH4_slope_umol_per_day)) %>%
+  left_join(output_join, by = c("chamber_treatment", "time2")) %>%
+  filter(!is.na(exp_var_value)) %>%
+  group_by(chamber_treatment, grouped_scale, exp_var, grouped_scale_exp, lag) %>%
+  summarize(entropy_y = entropy(bin(CH4_slope_umol_per_day, 9)),
+            mut_inf = MutInf(bin(exp_var_value, 9), bin(CH4_slope_umol_per_day, 9))/entropy_y) %>%
+  group_by(chamber_treatment, grouped_scale, exp_var, grouped_scale_exp) %>%
+  filter(lag = max(mut_inf, na.rm = T))
+
+#Plot
+mut_infs %>%
+  mutate(chamber_treatment = factor(chamber_treatment,
+                                    levels = c("c_1_amb",
+                                               "c_2_amb",
+                                               "c_3_e0.75",
+                                               "c_4_e1.5",
+                                               "c_5_e2.25",
+                                               "c_6_e2.25",
+                                               "c_7_e3.0",
+                                               "c_8_e3.75",
+                                               "c_9_e3.75",
+                                               "c_10_e4.5",
+                                               "c_11_e5.25",
+                                               "c_12_e6.0")),
+         grouped_scale = paste0(grouped_scale, " (CH4)")) %>%
+  ggplot(aes(x = mut_inf, y = exp_var, color = chamber_treatment)) +
+  geom_point() + 
+  facet_grid(cols = vars(grouped_scale), rows = vars(grouped_scale_exp)) +
+  ylab("Explanatory variable") +
+  xlab("Relative mutual information") +
+  scale_color_viridis_d()
 ```
 
 Ari:
