--- a/analysis/Wavelet.Rmd
+++ b/analysis/Wavelet.Rmd
@@ -14,6 +14,8 @@ source("../R/qaqc.R")
 
 raw <- read_csv("../Raw_data/GENX_Flux_SD_Loggernet_2021-05-05_to_2022-12-31_derived.csv", show_col_types = FALSE)
 raw2 <- read_csv("../Raw_data/GENX_Flux_SD_Loggernet_2023-01-01_to_2023-11-15_derived.csv", show_col_types = FALSE)
+met <- read_csv("../processed_data/met_output.csv")
+
 ch4 <- bind_rows(raw, raw2) %>%
   qaqc() %>%
   mutate(time2 = as.Date(time2)) %>%
@@ -23,12 +25,18 @@ ch4 <- bind_rows(raw, raw2) %>%
             therm10c = mean(therm10c, na.rm = T), 
             corrected_depth = mean(corrected_depth, na.rm = T), 
             salinity = mean(salinity, na.rm = T),
-            CO2_slope_mmol_per_day = mean(CO2_slope_mmol_per_day, na.rm = T))
+            CO2_slope_mmol_per_day = mean(CO2_slope_mmol_per_day, na.rm = T)) %>%
+  mutate(CH4_slope_umol_per_day = ifelse(time2 > "2023-03-02" & time2 < "2023-06-27",
+                                         NA,
+                                         CH4_slope_umol_per_day)) %>%
+  left_join(met %>% rename(time2 = Date))
 
 #Not loading driver data separately because it is already in the CH4 data file
 ch4 %>%
-  ggplot(aes(x = time2, y = salinity)) +
-  geom_line()+
+  filter(time2 > "2022-12-01", time2 < "2023-02-01") %>%
+  ggplot(aes(x = time2, y = CH4_slope_umol_per_day)) +
+  #geom_line()+
+  geom_point(size = 0.2) +
   facet_wrap(~chamber_treatment)
 ```
 
@@ -173,7 +181,8 @@ discrete_scales_exp <- discrete_scales %>%
 mut_infs <- discrete_scales %>%
   dplyr::select(c(grouped_scale, chamber_treatment, time2, CH4_slope_umol_per_day)) %>%
   left_join(discrete_scales_exp, by = c("chamber_treatment", "time2")) %>%
-  filter(!is.na(exp_var_value)) %>%
+  filter(!is.na(exp_var_value),
+         !is.na(CH4_slope_umol_per_day)) %>%
   group_by(chamber_treatment, grouped_scale, exp_var, grouped_scale_exp) %>%
   summarize(entropy_y = entropy(bin(CH4_slope_umol_per_day, 9)),
             mut_inf = MutInf(bin(exp_var_value, 9), bin(CH4_slope_umol_per_day, 9))/entropy_y)
@@ -200,6 +209,46 @@ mut_infs %>%
   ylab("Explanatory variable") +
   xlab("Relative mutual information") +
   scale_color_viridis_d()
+
+for(scale in unique(discrete_scales$grouped_scale)) {
+  plot <- discrete_scales %>%
+    dplyr::select(c(grouped_scale, chamber_treatment, time2, CH4_slope_umol_per_day)) %>%
+    left_join(discrete_scales_exp, by = c("chamber_treatment", "time2")) %>%
+    filter(!is.na(exp_var_value),
+           !is.na(CH4_slope_umol_per_day),
+           grouped_scale == scale,
+           grouped_scale_exp == scale) %>%
+    group_by(exp_var, chamber_treatment) %>%
+    mutate(cor = cor(CH4_slope_umol_per_day, exp_var_value, method = "spearman")) %>%
+    ggplot(aes(y = CH4_slope_umol_per_day, x = exp_var_value, color = abs(cor))) +
+    geom_point() +
+    ggh4x::facet_grid2(rows = vars(exp_var), cols = vars(chamber_treatment), 
+                       scales = "free", independent = "x") +
+    scale_color_viridis_c() +
+    theme(strip.text.y = element_text(angle = 0),
+          strip.text.x = element_text(angle = 90))
+  jpeg(paste0("../figures/correlations - ",scale,".jpg"), res = 300, width = 15, height = 10, units = "in")
+  print(plot)
+  dev.off()
+}
+
+discrete_scales %>%
+  filter(grouped_scale == "Seasonal") %>%
+  ungroup()%>%
+  select(time2, chamber_treatment, CH4_slope_umol_per_day, ws_ms_rm_avg) %>%
+  pivot_longer(cols = -c(time2, chamber_treatment), names_to = "var_name", values_to = "value") %>%
+  ggplot(aes(x = time2, y = value, color = chamber_treatment)) +
+  geom_line() +
+  facet_grid(rows = vars(var_name), cols = vars(chamber_treatment), scales = "free_y") 
+
+discrete_scales %>%
+  filter(grouped_scale == "Seasonal") %>%
+  ungroup()%>%
+  select(time2, chamber_treatment, CH4_slope_umol_per_day, therm10c) %>%
+  pivot_longer(cols = -c(time2, chamber_treatment), names_to = "var_name", values_to = "value") %>%
+  ggplot(aes(x = time2, y = value, color = chamber_treatment)) +
+  geom_line() +
+  facet_grid(rows = vars(var_name), cols = vars(chamber_treatment), scales = "free_y") 
 ```
 
 With lags
@@ -230,7 +279,9 @@ fill_lags <- function(all_lags, lag) {
   return(filled_lags)
 }
 
-output <- pmap(list(-100:100), 
+#library(furrr)
+#plan(multisession)
+output <- pmap(list(-200:0), 
               ~fill_lags(all_lags = discrete_scales_exp %>%
                            group_by(grouped_scale_exp, 
                                     chamber_treatment, 
@@ -263,12 +314,14 @@ for(site in unique(discrete_scales$chamber_treatment)){
     facet_grid(cols = vars(grouped_scale), rows = vars(grouped_scale_exp)) +
     ylab("Explanatory variable") +
     xlab("Relative mutual information") +
-    scale_fill_distiller(palette = "RdYlBu", direction = -1)
+    scale_fill_distiller(palette = "RdYlBu", direction = -1) +
+    ggtitle(site)
   print(plot)
 }
 
 for(scale in unique(discrete_scales$grouped_scale)){
   plot <- lagged_mut_infs %>%
+    filter(lag <= 0, lag >=-100) %>%
     mutate(chamber_treatment = factor(chamber_treatment,
                                     levels = c("c_1_amb",
                                                "c_2_amb",
@@ -295,3 +348,6 @@ for(scale in unique(discrete_scales$grouped_scale)){
 
 Ari:
 Quantile regressions were fitted for the 0.1, 0.5, and 0.9 quantiles of CH4 fluxes using the nlrq() function within the R package ‘quantreg’ (Koenker, 2023) due to the observed non-linear relationships between CH4 fluxes and the tested predictor variables. The slopes of the fitted conditional quantile regressions were used to estimate the predictor level required to decrease CH4 fluxes by half, based on an exponential decay relationship (i.e., X1/2 = ln(2)/slope). Subsequently, threshold values were estimated as 7 times X1/2, representing a 99% reduction of CH4 fluxes through interactions with increasing predictor levels. We calculated these thresholds for the 50th and 90th percentiles of the conditional distribution of CH4 fluxes, representing the predictor thresholds below which the 50% and 90% of the highest CH4 fluxes occur, respectively.
+
+Partial associations:
+https://agupubs.onlinelibrary.wiley.com/doi/full/10.1002/2013WR013845
